--- a/Assignment No 2 – Soham Mehta.ipynb
+++ b/Assignment No 2 – Soham Mehta.ipynb
@@ -43,12 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "65985917-dc14-4d8e-b323-de9db423b28f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 is divisible by 3.\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "x = 6 \n",
+    "if x % 3 == 0:\n",
+    "    print(str(x) + \" is divisible by 3.\")\n",
+    "else:\n",
+    "    print(str(x) + \" is not divisible by three.\") \n",
+    "    "
    ]
   },
   {
@@ -69,12 +82,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "332a780e-c157-4095-b07c-218d7388818a",
+   "execution_count": 70,
+   "id": "2c0021a7-5ace-4693-902b-af343efb2cbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple is not acceptable.\n",
+      "orange is acceptable.\n",
+      "pear is not acceptable.\n",
+      "kiwi is not acceptable.\n",
+      "strawberry is not acceptable.\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "fruits = [\"apple\", \"orange\", \"pear\", \"kiwi\", \"strawberry\"]\n",
+    "for item in fruits:\n",
+    "    if item == \"orange\":\n",
+    "        print(str(item) + \" is acceptable.\")\n",
+    "    else:\n",
+    "        print(str(item) + \" is not acceptable.\")\n"
    ]
   },
   {
@@ -95,12 +125,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "6924d464-64a2-4428-af10-211bbc1c6595",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting haversine\n",
+      "  Downloading haversine-2.8.0-py2.py3-none-any.whl (7.7 kB)\n",
+      "Installing collected packages: haversine\n",
+      "Successfully installed haversine-2.8.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "!pip install haversine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "089bf414-cfc0-4d14-9a5b-5dce204eedfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.675398815208229"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import haversine as hs\n",
+    "#Calculating the distance between Agnes Blackadder Hall (loc1) & David Rusell Apartments (loc2), St Andrews, UK.\n",
+    "loc1=(56.3402,-2.8142)\n",
+    "loc2=(56.335165326,-2.820330052)\n",
+    "hs.haversine(loc1,loc2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "a54b7b1b-a351-441c-8a2a-0918c32604c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6753978823089409 km\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculating distance using the formula: \n",
+    "from math import radians, cos, sin, asin, sqrt\n",
+    "def distance(lat1, lat2, lon1, lon2):\n",
+    "    \n",
+    "    lon1 = radians(lon1)\n",
+    "    lon2 = radians(lon2)\n",
+    "    lat1 = radians(lat1)\n",
+    "    lat2 = radians(lat2)\n",
+    "\n",
+    "    dlon = lon2 - lon1\n",
+    "    dlat = lat2 - lat1\n",
+    "    a = sin(dlat / 2)**2 + cos(lat1) * cos(lat2) * sin(dlon / 2)**2\n",
+    "\n",
+    "    c = 2 * asin(sqrt(a))\n",
+    "\n",
+    "    r = 6371\n",
+    "\n",
+    "    return(c * r)\n",
+    "\n",
+    "lat1 = 56.3402\n",
+    "lat2 = 56.335165326\n",
+    "lon1 = -2.8142\n",
+    "lon2 = -2.820330052\n",
+    "print(distance(lat1, lat2, lon1, lon2), \"km\")"
    ]
   },
   {
@@ -122,11 +229,287 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0aef80cc-6d19-4209-a30c-0fbc6192d521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "89c0a24f-8f50-49ee-bbfc-f4b00fe843fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fid</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>Inventory_</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>DBH</th>\n",
+       "      <th>Condition</th>\n",
+       "      <th>TreeHeight</th>\n",
+       "      <th>CrownWidth</th>\n",
+       "      <th>CrownWid_1</th>\n",
+       "      <th>CollectedB</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Genus</th>\n",
+       "      <th>Common_nam</th>\n",
+       "      <th>Genus_spec</th>\n",
+       "      <th>Functional</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Native</th>\n",
+       "      <th>Edible</th>\n",
+       "      <th>Nuisance</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Species_fa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>426</td>\n",
+       "      <td>2017/05/09</td>\n",
+       "      <td>PSME</td>\n",
+       "      <td>37.4</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pseudotsuga</td>\n",
+       "      <td>Douglas-fir</td>\n",
+       "      <td>Pseudotsuga menziesii</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North America - from British Columbia south to...</td>\n",
+       "      <td>Bracts on cones look like a mouse's feet and t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>427</td>\n",
+       "      <td>2017/05/09</td>\n",
+       "      <td>PSME</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pseudotsuga</td>\n",
+       "      <td>Douglas-fir</td>\n",
+       "      <td>Pseudotsuga menziesii</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North America - from British Columbia south to...</td>\n",
+       "      <td>Bracts on cones look like a mouse's feet and t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>428</td>\n",
+       "      <td>2017/05/09</td>\n",
+       "      <td>CRLA</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Crataegus</td>\n",
+       "      <td>Lavalle hawthorn</td>\n",
+       "      <td>Crataegus x lavalleei</td>\n",
+       "      <td>BD</td>\n",
+       "      <td>S</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North America - a hybrid between a Mexican and...</td>\n",
+       "      <td>Like most hawthorns, the tree has stout thorns...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>429</td>\n",
+       "      <td>2017/05/09</td>\n",
+       "      <td>QURU</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Quercus</td>\n",
+       "      <td>northern red oak</td>\n",
+       "      <td>Quercus rubra</td>\n",
+       "      <td>BD</td>\n",
+       "      <td>L</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North America - eastern Canada and eastern USA...</td>\n",
+       "      <td>Acorns take two years to mature and are an imp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>430</td>\n",
+       "      <td>2017/05/09</td>\n",
+       "      <td>PSME</td>\n",
+       "      <td>33.2</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>staff</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pseudotsuga</td>\n",
+       "      <td>Douglas-fir</td>\n",
+       "      <td>Pseudotsuga menziesii</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>North America - from British Columbia south to...</td>\n",
+       "      <td>Bracts on cones look like a mouse's feet and t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fid  OBJECTID  Inventory_ Species   DBH Condition  TreeHeight  CrownWidth  \\\n",
+       "0    1       426  2017/05/09    PSME  37.4      Fair       105.0        44.0   \n",
+       "1    2       427  2017/05/09    PSME  32.5      Fair        94.0        49.0   \n",
+       "2    3       428  2017/05/09    CRLA   9.7      Fair        23.0        28.0   \n",
+       "3    4       429  2017/05/09    QURU  10.3      Poor        28.0        38.0   \n",
+       "4    5       430  2017/05/09    PSME  33.2      Fair       102.0        43.0   \n",
+       "\n",
+       "   CrownWid_1 CollectedB  ...        Genus        Common_nam  \\\n",
+       "0        57.0      staff  ...  Pseudotsuga       Douglas-fir   \n",
+       "1        45.0      staff  ...  Pseudotsuga       Douglas-fir   \n",
+       "2        27.0      staff  ...    Crataegus  Lavalle hawthorn   \n",
+       "3        31.0      staff  ...      Quercus  northern red oak   \n",
+       "4        44.0      staff  ...  Pseudotsuga       Douglas-fir   \n",
+       "\n",
+       "              Genus_spec Functional Size Native Edible Nuisance  \\\n",
+       "0  Pseudotsuga menziesii         CE    L    Yes    NaN      NaN   \n",
+       "1  Pseudotsuga menziesii         CE    L    Yes    NaN      NaN   \n",
+       "2  Crataegus x lavalleei         BD    S     No    NaN      NaN   \n",
+       "3          Quercus rubra         BD    L     No    NaN      NaN   \n",
+       "4  Pseudotsuga menziesii         CE    L    Yes    NaN      NaN   \n",
+       "\n",
+       "                                              Origin  \\\n",
+       "0  North America - from British Columbia south to...   \n",
+       "1  North America - from British Columbia south to...   \n",
+       "2  North America - a hybrid between a Mexican and...   \n",
+       "3  North America - eastern Canada and eastern USA...   \n",
+       "4  North America - from British Columbia south to...   \n",
+       "\n",
+       "                                          Species_fa  \n",
+       "0  Bracts on cones look like a mouse's feet and t...  \n",
+       "1  Bracts on cones look like a mouse's feet and t...  \n",
+       "2  Like most hawthorns, the tree has stout thorns...  \n",
+       "3  Acorns take two years to mature and are an imp...  \n",
+       "4  Bracts on cones look like a mouse's feet and t...  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trees_df = pd.read_csv(\"Assignment 2 data/portland_park_trees.csv\")\n",
+    "trees_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dba7247e-7c01-4b29-8cd6-d146dd6aa0af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25534, 40)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trees_df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6f8c8474-df46-439c-877a-24f777d3d6dd",
    "metadata": {},
    "source": [
     "**Question 1**: How many trees are of the Quercus or Acer genus? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4ab6a5b8-0399-4601-a08a-2d301a054932",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5675\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample1 = trees_df.query('Genus== \"Acer\" or Genus ==\"Quercus\"')\n",
+    "print (len(sample1))"
    ]
   },
   {
@@ -138,6 +521,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e872d625-4240-462a-92f5-bf24725c87f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3666\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample2 = trees_df.query('Genus==\"Acer\" or Genus == \"Quercus\" and DBH > 50')\n",
+    "print(len(sample2))\n",
+    "print('')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b62806ae-cb79-40be-b57d-fc2c37441c95",
    "metadata": {},
@@ -146,11 +550,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9226d50e-5270-4160-b494-18727f439e40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6e5c0ba1-e4c6-4dc9-87f9-aaf07bfd263d",
    "metadata": {},
    "source": [
     "**Question 4**: How many different species of trees are recorded in the Acer genus?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c0e72467-4515-4585-af93-2fad2b1a69b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3666\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample3 = trees_df.query('Genus==\"Acer\" and Genus_spec ==')\n",
+    "print(len(sample2))\n",
+    "print('')"
    ]
   },
   {
